<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.syorito_hatsuki.onlyone.ui.users.MainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/goToUserPage"
            app:destination="@id/blankFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dev.syorito_hatsuki.onlyone.ui.dialogs.DialogFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dialogs" >
        <action
            android:id="@+id/goToMessages"
            app:destination="@id/messageFragment" />
    </fragment>

    <fragment
        android:id="@+id/UserProfile"
        android:name="dev.syorito_hatsuki.onlyone.ui.fragments.BlankFragment"
        android:label="@string/user_page"
        tools:layout="@layout/fragment_blank" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="dev.syorito_hatsuki.onlyone.ui.fragments.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" >
        <argument
            android:name="UserID"
            app:argType="integer" />
        <action
            android:id="@+id/goHome"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="dev.syorito_hatsuki.onlyone.ui.dialogs.messages.MessageFragment"
        android:label="MessageFragment" >
        <argument
            android:name="UserID"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>